--- a/emacs.org
+++ b/emacs.org
@@ -992,7 +992,9 @@ $HOME/bin
 (setq org-pomodoro-format "Pomodoro %s"
       org-pomodoro-short-break-format "Short Break %s"
       org-pomodoro-long-break-format "Long Break %s"
-      org-pomodoro-ask-upon-killing nil)
+      org-pomodoro-ask-upon-killing nil
+      org-pomodoro-short-break-sound-p nil
+      org-pomodoro-long-break-sound-p nil)
 
 (custom-set-faces '(org-pomodoro-mode-line ((nil (:foreground "#2aa198")))))
 
