--- a/emacs.org
+++ b/emacs.org
@@ -754,9 +754,6 @@ $HOME/bin
 
 (setq projectile-completion-system 'helm)
 
-(setq flycheck-standard-error-navigation nil
-      flycheck-display-errors-function nil)
-
 (global-set-key (kbd "C-c h") 'helm-command-prefix)
 (global-unset-key (kbd "C-x c"))
 
@@ -806,8 +803,6 @@ $HOME/bin
 
 (projectile-global-mode)
 (helm-projectile-on)
-
-(global-flycheck-mode)
 
 (add-to-list 'helm-dabbrev-major-mode-assoc '(scala-mode . sbt-mode))
 #+END_SRC
@@ -1013,6 +1008,28 @@ $HOME/bin
 (add-to-list 'auto-mode-alist '("\\.org-archive$" . org-mode))
 
 (add-hook 'org-mode-hook '(lambda () (text-scale-set 2)))
+#+END_SRC
+
+** flycheck
+
+#+BEGIN_SRC emacs-lisp
+(setq flycheck-standard-error-navigation nil
+      flycheck-display-errors-function nil)
+
+(flycheck-define-checker proselint
+  "A linter for prose using proselint."
+  :command ("proselint" source-inplace)
+  :error-patterns
+  ((warning line-start (file-name) ":" line ":" column ": "
+            (id (one-or-more (not (any " "))))
+            (message (one-or-more not-newline)
+                     (zero-or-more "\n" (any " ") (one-or-more not-newline)))
+            line-end))
+  :modes (text-mode markdown-mode gfm-mode))
+
+(add-to-list 'flycheck-checkers 'proselint)
+
+(global-flycheck-mode)
 #+END_SRC
 
 ** scala
