Updating org-babel src editing to use full frame instead of splitting the window.

--- a/emacs.org
+++ b/emacs.org
@@ -968,6 +968,7 @@ $HOME/bin
       org-refile-allow-creating-parent-nodes '(confirm)
       org-tags-column -100
       org-src-preserve-indentation t
+      org-src-window-setup 'current-window
       org-cycle-open-archived-trees t)
 
 (setq org--possible-todo-todo-states '("todo" "incoming" "captured")
