Looks like scala-mode2 was merged back into scala-mode. Updating the package name.

--- a/emacs.org
+++ b/emacs.org
@@ -238,7 +238,7 @@ $HOME/bin
 
 (use-package dockerfile-mode :ensure t)
 
-(use-package scala-mode2 :ensure t
+(use-package scala-mode :ensure t
   :mode (("\\.scala$" . scala-mode)
          ("\\.sbt$" . scala-mode)))
 
