--- a/emacs.org
+++ b/emacs.org
@@ -260,6 +260,8 @@ $HOME/bin
 
 (use-package coffee-mode
   :config (setq coffee-tab-width 2))
+
+(use-package terraform-mode)
 #+END_SRC
 
 * customization
@@ -315,6 +317,8 @@ $HOME/bin
 (add-to-list 'auto-mode-alist '("\\.proto$" . c-mode))
 
 (add-to-list 'auto-mode-alist '("\\.scss$" . css-mode))
+
+(add-to-list 'auto-mode-alist '("\\.tfstate$" . js-mode))
 
 (add-hook 'text-mode-hook 'flyspell-mode)
 
