--- a/emacs.org
+++ b/emacs.org
@@ -298,6 +298,8 @@ $HOME/bin
 
 (put 'dired-find-alternate-file 'disabled nil)
 
+(setq wdired-allow-to-change-permissions t)
+
 (add-hook 'after-save-hook 'executable-make-buffer-file-executable-if-script-p)
 
 (add-hook 'before-save-hook 'delete-trailing-whitespace)
